Bug 449070 - Places panel is too wide
Summary: Places panel is too wide
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-24 11:26 UTC by Fabian Vogt
Modified: 2025-09-26 09:20 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2022-01-24 11:26:33 UTC
As found by openQA, the places panel is too wide, at least on 1024x768:

https://openqa.opensuse.org/tests/2152778#step/dolphin/5

With 21.12, it's smaller: https://openqa.opensuse.org/tests/2152783#step/dolphin/4
Comment 1 tempqd 2025-08-02 17:14:03 UTC
I looked into this a few months ago (since it's long been the only failing test in openQA for Tumbleweed KDE) and forgot to report back.

Seems like it might have been a side effect of this major overhaul? https://invent.kde.org/system/dolphin/-/merge_requests/309

I think it's been so long that this new larger width has basically become the de facto default and expected behavior. I still think the current width is too wide subjectively though, so I'd still suggest we narrow it, even if it'd perhaps now be considered a wishlist item rather than a regression fix. In any case, I think the openQA test will need adjusting as it's effectively become outdated now.
Comment 2 Fabian Vogt 2025-08-03 12:24:35 UTC
> I looked into this a few months ago (since it's long been the only failing test in openQA for Tumbleweed KDE) and forgot to report back.

It's just a softfail, i.e. "not great but ok for now". It's possible to just remove the bug reference though and it'll turn green instead of orange.

>  I think it's been so long that this new larger width has basically become the de facto default and expected behavior. I still think the current width is too wide subjectively though, so I'd still suggest we narrow it, even if it'd perhaps now be considered a wishlist item rather than a regression fix.

+1 on both.
Comment 3 tempqd 2025-08-15 05:13:17 UTC
Opened https://invent.kde.org/system/dolphin/-/merge_requests/1016 (bug janitor bot didn't auto-link it here?)
Comment 4 Bug Janitor Service 2025-09-21 21:08:37 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1059
Comment 5 Méven 2025-09-26 09:20:22 UTC
Git commit 7eb1696a32891ce4f1f0e44c590a7fdb7c55fecd by Méven Car, on behalf of Tem PQD.
Committed on 26/09/2025 at 09:12.
Pushed by meven into branch 'master'.

placespanel: Fix default width by moving things from showEvent to constructor

Move instantiation, setModel, and some connections to constructor and remove showEvent.

This was being done in an erroneous lazy order which led to the places panel's sizeHint not being called properly.

Also removes the double loading workaround in setUrl, which is no longer needed either.

M  +16   -27   src/panels/places/placespanel.cpp
M  +0    -2    src/panels/places/placespanel.h

https://invent.kde.org/system/dolphin/-/commit/7eb1696a32891ce4f1f0e44c590a7fdb7c55fecd