placespanel: Fix default width by moving things from showEvent to constructor

Move instantiation, setModel, and some connections to constructor and remove showEvent.

This was being done in an erroneous lazy order which led to the places panel's sizeHint not being called properly.

Also removes the double loading workaround in setUrl, which is no longer needed either.

BUG: 449070